--- a/css/main.css
+++ b/css/main.css
@@ -555,33 +555,60 @@ body {
 }
 
 .hero {
-  padding-top: 200px;
+  /*padding-top: 200px;
   padding-bottom: 200px;
-  width: 1600px;
+  width: 1600px;*/
+  padding-top: 118px;
+  padding-bottom: 118px;
+  width: 100%;
   background-color: #c4c4c4;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../img/hero-bg.jpg);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero-bg.jpg);
   background-repeat: no-repeat;
 }
+@media screen and (min-width: 768px) {
+  .hero {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    width: 1600px;
+  }
+}
 
 .hero-main-title {
   color: #ffffff;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   text-align: center;
-  max-width: 696px;
+  max-width: 360px;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 30px;
 }
+@media screen and (min-width: 1200px) {
+  .hero-main-title {
+    max-width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
 
 .hero-btn {
-  min-width: 216px;
-  padding: 10px 32px;
+  padding: 10px 24px;
   margin: 0 auto;
+}
+@media screen and (min-width: 1200px) {
+  .hero-btn {
+    min-width: 216px;
+    padding: 10px 32px;
+  }
 }
 
 .advantages {
