--- a/css/main.css
+++ b/css/main.css
@@ -560,16 +560,13 @@ body {
   width: 1600px;*/
   padding-top: 118px;
   padding-bottom: 118px;
-  width: 100%;
   background-color: #c4c4c4;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../img/hero-bg.jpg);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero-bg.jpg);
   background-repeat: no-repeat;
-}
-@media screen and (min-width: 768px) {
-  .hero {
+  /*@media screen and (min-width: 768px) {
     width: 768px;
-  }
+  }*/
 }
 @media screen and (min-width: 1200px) {
   .hero {
@@ -609,10 +606,6 @@ body {
     min-width: 216px;
     padding: 10px 32px;
   }
-}
-
-.advantages {
-  padding-bottom: 0;
 }
 
 .advantages-list {
