--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -4,14 +4,14 @@
   width: 1600px;*/
   padding-top: 118px;
   padding-bottom: 118px;
-  width: 100%;
+  // width: 100%;
   background-color: #c4c4c4;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../img/hero-bg.jpg);
   background-repeat: no-repeat;
-  @media screen and (min-width: 768px) {
+  /*@media screen and (min-width: 768px) {
     width: 768px;
-  }
+  }*/
   @media screen and (min-width: 1200px) {
     padding-top: 200px;
     padding-bottom: 200px;
