--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,6 +1,6 @@
 .clients-title {
   margin-bottom: 30px;
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     margin-bottom: 50px;
   }
 }
@@ -10,13 +10,13 @@
   gap: var(--main-gap);
 }
 .clients-item {
-  @media screen and (min-width: 480px) {
+  @include mobile {
     width: calc((100% - 30px) / 2);
   }
-  @media screen and (min-width: 768px) {
+  @include tablet {
     width: calc((100% - 60px) / 3);
   }
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     width: calc((100% - 150px) / 6);
   }
 }
