--- a/sass/layouts/_portfolio-cards.scss
+++ b/sass/layouts/_portfolio-cards.scss
@@ -6,10 +6,10 @@
 .portfolio-list-item {
   width: 100%;
   //flex-basis: calc((100% - 90px) / 4);
-  @media screen and (min-width: 768px) {
+  @include tablet {
     width: calc((100% - 30px) / 2);
   }
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     width: calc((100% - 90px) / 4);
   }
 }
