--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -16,7 +16,7 @@ body {
 .section-body {
   padding-top: 60px;
   padding-bottom: 60px;
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     padding-top: 94px;
     padding-bottom: 94px;
   }
