--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -5,13 +5,13 @@
   margin-left: auto;
   margin-right: auto;
   /*outline: 2px solid red;*/
-  @media screen and (min-width: 480px) {
+  @include mobile {
     width: 480px;
   }
-  @media screen and (min-width: 768px) {
+  @include tablet {
     width: 768px;
   }
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     width: 1200px;
   }
 }
