--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -7,12 +7,12 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    @media screen and (min-width: 768px) {
+    @include tablet {
       flex-direction: row;
       flex-wrap: wrap;
       justify-content: center;
     }
-    @media screen and (min-width: 1200px) {
+    @include desktop {
       align-items: baseline;
       justify-content: flex-start;
       text-align: left;
@@ -21,10 +21,10 @@
 }
 .contacts {
   margin-bottom: 60px;
-  @media screen and (min-width: 480px) {
+  @include mobile {
     text-align: center;
   }
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     margin-right: 70px;
     margin-bottom: 0;
     text-align: left;
@@ -61,15 +61,15 @@
 .footer-soc {
   margin: 0 auto;
   margin-bottom: 60px;
-  @media screen and (min-width: 480px) {
+  @include mobile {
     //text-align: center;
     align-items: center;
   }
-  @media screen and (min-width: 768px) {
+  @include tablet {
     margin-left: 165px;
     margin-right: 0;
   }
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     margin-left: 0;
     margin-bottom: 0;
   }
@@ -92,10 +92,10 @@
   //margin-left: auto;
   //display: flex;
   //flex-direction: column;
-  @media screen and (min-width: 480px) {
+  @include mobile {
     text-align: center;
   }
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     margin-left: auto;
     text-align: left;
   }
@@ -114,7 +114,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     flex-direction: row;
   }
 }
@@ -129,10 +129,10 @@
   padding: 15px 16px;
   margin-bottom: 20px;
   transition: outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  @media screen and (min-width: 768px) {
+  @include tablet {
     width: 450px;
   }
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     margin-right: 12px;
     width: 358px;
     margin-bottom: 0;
