--- a/sass/layouts/_portfolio-btn.scss
+++ b/sass/layouts/_portfolio-btn.scss
@@ -6,11 +6,11 @@
   /* @media screen and (min-width: 480px) {
     margin-bottom: 40px;
   }*/
-  @media screen and (min-width: 768px) {
+  @include tablet {
     margin-bottom: 30px;
     justify-content: center;
   }
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     margin-bottom: 50px;
     justify-content: center;
   }
