--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -11,14 +11,14 @@
 }
 .team__item {
   width: 100%;
-  @media screen and (min-width: 768px) {
-    width: calc((100% - 30px) / 2);
-  }
-  @media screen and (min-width: 1200px) {
-    width: calc((100% - 90px) / 4);
-  }
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+  @include tablet {
+    width: calc((100% - 30px) / 2);
+  }
+  @include desktop {
+    width: calc((100% - 90px) / 4);
+  }
 }
 .team__img {
   background-color: #757575;
