--- a/sass/layouts/_workarea.scss
+++ b/sass/layouts/_workarea.scss
@@ -1,15 +1,6 @@
 .workarea {
   @media screen and (max-width: 1199px) {
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
+    display: none;
   }
 }
 .workarea-title {
