--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -1,10 +1,11 @@
 :root {
-    --primary-text-color: #757575;
-    --primary-white-color: #ffffff;
-    --accent-color: #2196f3;
-    --hero-footer-color: #2f303a;
-    --title-color: #212121;
-    --adv-workarea-color: #f5f5f5;
-    --typical-letter-spacing: 0.03em;
-    --main-gap: 30px;
+  --primary-text-color: #757575;
+  --primary-white-color: #ffffff;
+  --accent-color: #2196f3;
+  --hero-footer-color: #2f303a;
+  --title-color: #212121;
+  --adv-workarea-color: #f5f5f5;
+  --typical-letter-spacing: 0.03em;
+  --main-gap: 30px;
+  --bg-gradient: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
 }
