--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -10,6 +10,7 @@
 .connection {
   display: flex;
   align-items: center;
+  display: none;
 }
 .header__logo {
   margin-right: 93px;
@@ -53,6 +54,7 @@
   border-radius: 2px;
 }
 .connection {
+  display: none;
   margin-left: auto;
   gap: 50px;
 }
@@ -68,4 +70,69 @@
     color: var(--accent-color);
     fill: var(--accent-color);
   }
+}
+
+.menu-open-btn {
+  margin-left: auto;
+}
+.mob-menu {
+  position: fixed;
+  background-color: #fff;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-left: 40px;
+  > .container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+}
+.menu-close-btn {
+  display: block;
+  margin-left: auto;
+}
+.mob-menu-navigation {
+  margin-bottom: 302px;
+}
+.mob-menu-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.mob-menu-link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--title-color);
+}
+.mob-tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+  margin-bottom: 32px;
+}
+.mob-mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  margin-bottom: 64px;
+}
+.mob-soc-list {
+  display: flex;
+  gap: 20px;
+}
+.mob-soc-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22px;
+  letter-spacing: 0.02em;
+  color: #2196f3;
 }
