--- a/css/main.css
+++ b/css/main.css
@@ -568,10 +568,6 @@ body {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
-  padding-top: 48px;
-  padding-bottom: 48px;
-  padding-left: 40px;
 }
 .mob-menu > .container {
   height: 100%;
@@ -582,15 +578,40 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  padding-top: 10px;
+  padding-bottom: 48px;
+  padding-left: 40px;
+  padding-right: 15px;
+}
+@media screen and (min-width: 768px) {
+  .mob-menu > .container {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mob-menu > .container {
+    display: none;
+  }
+}
+
+.mob-menu-top {
+  margin-bottom: 306px;
 }
 
 .menu-close-btn {
   display: block;
   margin-left: auto;
+  padding: 0;
+  width: 40px;
+  height: 40px;
+  background-color: #fff;
+  border: 0px;
+  fill: var(--title-color);
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.mob-menu-navigation {
-  margin-bottom: 302px;
+.menu-close-btn:hover, .menu-close-btn:focus {
+  fill: #188ce8;
 }
 
 .mob-menu-item:not(:last-child) {
@@ -605,29 +626,46 @@ body {
   color: var(--title-color);
 }
 
-.mob-tel {
-  font-weight: 500;
-  font-size: 34px;
-  line-height: 1.18;
-  letter-spacing: 0.02em;
-  color: #2196f3;
+.mob-menu-link.active {
+  color: var(--accent-color);
+}
+
+.mob-menu-item .mob-menu-link:hover {
+  color: var(--title-color);
+}
+
+.mob-connect {
+  margin-bottom: 64px;
+}
+
+.mob-connect-item:not(:last-child) {
   margin-bottom: 32px;
 }
 
-.mob-mail {
+.mob-tel {
   font-weight: 500;
   font-size: 24px;
   line-height: 1.17;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
-  margin-bottom: 64px;
+}
+
+.mob-mail {
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
 }
 
 .mob-soc-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 20px;
+  list-style: none;
 }
 
 .mob-soc-link {
@@ -635,7 +673,24 @@ body {
   font-size: 18px;
   line-height: 1.22px;
   letter-spacing: 0.02em;
-  color: #2196f3;
+  color: var(--accent-color);
+  padding-top: 13px;
+  padding-bottom: 13px;
+}
+
+.mob-soc-item {
+  position: relative;
+}
+
+.line::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 1px;
+  height: 22px;
+  bottom: 2px;
+  right: -10px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 .hero {
