--- a/css/main.css
+++ b/css/main.css
@@ -462,134 +462,57 @@ body {
 .header {
   border-bottom: 1px solid #ececec;
 }
-.header__container {
+
+.mob-header .container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.header__navigation,
-.header__list,
-.connection {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: none;
-}
-
-.header__logo {
-  margin-right: 93px;
-}
-
-.header__list {
-  -webkit-column-gap: 50px;
-     -moz-column-gap: 50px;
-          column-gap: 50px;
-}
-
-.header__link,
-.connection__link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.header__link {
-  color: var(--title-color);
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.header__link:hover, .header__link:focus {
-  color: var(--accent-color);
-}
-
-.header__item {
-  position: relative;
-}
-
-.active {
-  color: var(--accent-color);
-}
-
-.active::after {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 4px;
-  bottom: -1px;
-  left: 0;
-  background-color: var(--accent-color);
-  border: none;
-  border-radius: 2px;
-}
-
-.connection {
-  display: none;
-  margin-left: auto;
-  gap: 50px;
-}
-
-.connection__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 10px;
-  color: var(--primary-text-color);
-  fill: var(--primary-text-color);
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.connection__link:hover, .connection__link:focus {
-  color: var(--accent-color);
-  fill: var(--accent-color);
 }
 
 .menu-open-btn {
   margin-left: auto;
 }
 
-.mob-menu {
-  position: fixed;
-  background-color: #fff;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  width: 100vw;
-}
-.mob-menu > .container {
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding-top: 10px;
-  padding-bottom: 48px;
-  padding-left: 40px;
-  padding-right: 15px;
-}
-@media screen and (min-width: 768px) {
-  .mob-menu > .container {
+@media screen and (max-width: 480px) {
+  .mob-menu {
     display: none;
+    position: fixed;
+    background-color: #fff;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+  }
+  .mob-menu.is-open {
+    display: block;
   }
 }
-@media screen and (min-width: 1200px) {
-  .mob-menu > .container {
+@media screen and (max-width: 480px) {
+  .mob-menu .container {
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding-top: 10px;
+    padding-bottom: 48px;
+    padding-left: 40px;
+    padding-right: 15px;
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .mob-menu {
     display: none;
   }
 }
@@ -697,6 +620,7 @@ body {
   padding-top: 118px;
   padding-bottom: 198px;
   width: 100%;
+  max-width: 1600px;
   background-color: #c4c4c4;
   background-image: var(--bg-gradient), url(../img/hero-bg-mob-1x.jpg);
   background-repeat: no-repeat;
