--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,103 +1,118 @@
 .header {
   border-bottom: 1px solid #ececec;
-  &__container {
-    display: flex;
-    align-items: center;
-  }
 }
-.header__navigation,
-.header__list,
-.connection {
+//  .header__container {
+//     display: flex;
+//     align-items: center;
+//   }
+
+// .header__navigation,
+// .header__list,
+// .connection {
+//   display: flex;
+//   align-items: center;
+//   display: none;
+// }
+// .header__logo {
+//   margin-right: 93px;
+// }
+// .header__list {
+//   column-gap: 50px;
+// }
+// .header__link,
+// .connection__link {
+//   font-weight: 500;
+//   font-size: 14px;
+//   line-height: 1.14;
+//   letter-spacing: 0.02em;
+//   padding-top: 32px;
+//   padding-bottom: 32px;
+// }
+// .header__link {
+//   color: var(--title-color);
+//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   &:hover,
+//   &:focus {
+//     color: var(--accent-color);
+//   }
+// }
+// .header__item {
+//   position: relative;
+// }
+// .active {
+//   color: var(--accent-color);
+// }
+// .active::after {
+//   content: '';
+//   position: absolute;
+//   display: block;
+//   width: 100%;
+//   height: 4px;
+//   bottom: -1px;
+//   left: 0;
+//   background-color: var(--accent-color);
+//   border: none;
+//   border-radius: 2px;
+// }
+// .connection {
+//   display: none;
+//   margin-left: auto;
+//   gap: 50px;
+// }
+// .connection__link {
+//   display: flex;
+//   align-items: center;
+//   gap: 10px;
+//   color: var(--primary-text-color);
+//   fill: var(--primary-text-color);
+//   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   &:hover,
+//   &:focus {
+//     color: var(--accent-color);
+//     fill: var(--accent-color);
+//   }
+// }
+.mob-header .container {
   display: flex;
   align-items: center;
-  display: none;
-}
-.header__logo {
-  margin-right: 93px;
-}
-.header__list {
-  column-gap: 50px;
-}
-.header__link,
-.connection__link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-.header__link {
-  color: var(--title-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-  }
-}
-.header__item {
-  position: relative;
-}
-.active {
-  color: var(--accent-color);
-}
-.active::after {
-  content: '';
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 4px;
-  bottom: -1px;
-  left: 0;
-  background-color: var(--accent-color);
-  border: none;
-  border-radius: 2px;
-}
-.connection {
-  display: none;
-  margin-left: auto;
-  gap: 50px;
-}
-.connection__link {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  color: var(--primary-text-color);
-  fill: var(--primary-text-color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-    fill: var(--accent-color);
-  }
 }
 .menu-open-btn {
   margin-left: auto;
 }
-.mob-menu {
-  position: fixed;
-  background-color: #fff;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  // @media screen and (max-width: 480px) {
-  // width: 480px;
-  // height: 100vh;
-  > .container {
+@media screen and (max-width: 480px) {
+  .mob-menu {
+    display: none;
+    position: fixed;
+    background-color: #fff;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+  }
+  .mob-menu.is-open {
+    display: block;
+  }
+}
+// @media screen and (max-width: 480px) {
+// width: 480px;
+// height: 100vh;
+
+.mob-menu .container {
+  @media screen and (max-width: 480px) {
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     padding-top: 10px;
     padding-bottom: 48px;
     padding-left: 40px;
     padding-right: 15px;
-    @include tablet {
-      display: none;
-    }
-    @include desktop {
-      display: none;
-    }
+  }
+}
+.mob-menu {
+  @media screen and (min-width: 481px) {
+    display: none;
   }
 }
 .mob-menu-top {
@@ -132,7 +147,7 @@
   color: var(--accent-color);
 }
 .mob-menu-item .mob-menu-link:hover {
-  color: var(--title-color)
+  color: var(--title-color);
 }
 //  .menu-close-btn:hover .mob-menu-link {
 //   color: var(--title-color)
@@ -174,7 +189,7 @@
   padding-top: 13px;
   padding-bottom: 13px;
 }
-.mob-soc-item{
+.mob-soc-item {
   position: relative;
 }
 .line::after {
@@ -187,6 +202,3 @@
   right: -10px;
   border: 1px solid rgba(33, 33, 33, 0.2);
 }
-
-
-
