--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -2,7 +2,7 @@
   padding-top: 118px;
   padding-bottom: 198px;
   width: 100%;
-  // width: 1600px;
+  max-width: 1600px;
   background-color: #c4c4c4;
   background-image: var(--bg-gradient), url(../img/hero-bg-mob-1x.jpg);
   background-repeat: no-repeat;
