--- a/css/main.css
+++ b/css/main.css
@@ -111,8 +111,8 @@ body {
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: var(--typical-letter-spacing);
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -463,7 +463,7 @@ body {
   border-bottom: 1px solid #ececec;
 }
 
-.mob-header .container {
+.header__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -472,8 +472,158 @@ body {
           align-items: center;
 }
 
-.menu-open-btn {
+.header__logo {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+@media screen and (min-width: 768px) {
+  .header__logo {
+    padding-top: 26px;
+    padding-bottom: 26px;
+    margin-right: 87px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    padding-top: 24px;
+    padding-bottom: 25px;
+    margin-right: 93px;
+  }
+}
+
+.header__menu-btn {
+  display: block;
   margin-left: auto;
+  padding: 0;
+  width: 40px;
+  height: 40px;
+  background-color: #fff;
+  border: 0px;
+  fill: #000000;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .header__menu-btn {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__menu-btn {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header__list,
+.connection {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__navigation,
+.header__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__list {
+    -webkit-column-gap: 50px;
+       -moz-column-gap: 50px;
+            column-gap: 50px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__link {
+    color: var(--title-color);
+    -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header__link:hover, .header__link:focus {
+    color: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__item {
+    position: relative;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .active {
+    color: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .active::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 4px;
+    bottom: -1px;
+    left: 0;
+    background-color: var(--accent-color);
+    border: none;
+    border-radius: 2px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .connection {
+    margin-left: auto;
+  }
+}
+
+.connection__link {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  color: var(--primary-text-color);
+  fill: var(--primary-text-color);
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.connection__link:hover, .connection__link:focus {
+  color: var(--accent-color);
+  fill: var(--accent-color);
+}
+@media screen and (min-width: 1200px) {
+  .connection__link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 10px;
+    font-size: 14px;
+    line-height: 1.14;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -517,11 +667,11 @@ body {
   }
 }
 
-.mob-menu-top {
+.mob-menu__top {
   margin-bottom: 306px;
 }
 
-.menu-close-btn {
+.mob-menu__close-btn {
   display: block;
   margin-left: auto;
   padding: 0;
@@ -533,15 +683,15 @@ body {
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.menu-close-btn:hover, .menu-close-btn:focus {
+.mob-menu__close-btn:hover, .mob-menu__close-btn:focus {
   fill: #188ce8;
 }
 
-.mob-menu-item:not(:last-child) {
+.mob-menu__item:not(:last-child) {
   margin-bottom: 32px;
 }
 
-.mob-menu-link {
+.mob-menu__link {
   font-weight: 500;
   font-size: 40px;
   line-height: 1.18;
@@ -549,19 +699,19 @@ body {
   color: var(--title-color);
 }
 
-.mob-menu-link.active {
+.mob-menu__link.active {
   color: var(--accent-color);
 }
 
-.mob-menu-item .mob-menu-link:hover {
+.mob-menu__item .mob-menu__link:hover {
   color: var(--title-color);
 }
 
-.mob-connect {
+.mob-connect__list {
   margin-bottom: 64px;
 }
 
-.mob-connect-item:not(:last-child) {
+.mob-connect__item:not(:last-child) {
   margin-bottom: 32px;
 }
 
@@ -581,7 +731,7 @@ body {
   color: var(--accent-color);
 }
 
-.mob-soc-list {
+.mob-soc__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -591,7 +741,7 @@ body {
   list-style: none;
 }
 
-.mob-soc-link {
+.mob-soc__link {
   font-weight: 500;
   font-size: 18px;
   line-height: 1.22px;
@@ -601,7 +751,7 @@ body {
   padding-bottom: 13px;
 }
 
-.mob-soc-item {
+.mob-soc__item {
   position: relative;
 }
 
