--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,14 +1,20 @@
 .logo {
   font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.17;
   letter-spacing: var(--typical-letter-spacing);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-  }
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
+  
+  // font-family: 'Raleway', sans-serif;
+  // font-weight: 700;
+  // font-size: 26px;
+  // line-height: 1.19;
+  
 }
 .accent-logo {
   color: var(--accent-color);
