--- a/css/main.css
+++ b/css/main.css
@@ -491,29 +491,6 @@ body {
   }
 }
 
-.header__menu-btn {
-  display: block;
-  margin-left: auto;
-  padding: 0;
-  width: 40px;
-  height: 40px;
-  background-color: #fff;
-  border: 0px;
-  fill: #000000;
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-@media screen and (min-width: 768px) {
-  .header__menu-btn {
-    display: none;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .header__menu-btn {
-    display: none;
-  }
-}
-
 @media screen and (max-width: 767px) {
   .header__list,
 .connection {
@@ -595,25 +572,8 @@ body {
     margin-left: auto;
   }
 }
-
-.connection__link {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  color: var(--primary-text-color);
-  fill: var(--primary-text-color);
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.connection__link:hover, .connection__link:focus {
-  color: var(--accent-color);
-  fill: var(--accent-color);
-}
 @media screen and (min-width: 1200px) {
-  .connection__link {
+  .connection {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -621,12 +581,35 @@ body {
         -ms-flex-align: center;
             align-items: center;
     gap: 10px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .connection__link {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: var(--primary-text-color);
+    fill: var(--primary-text-color);
+    -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .connection__link:hover, .connection__link:focus {
+    color: var(--accent-color);
+    fill: var(--accent-color);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .connection__link {
     font-size: 14px;
     line-height: 1.14;
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .mob-menu {
     display: none;
     position: fixed;
@@ -641,7 +624,7 @@ body {
     display: block;
   }
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .mob-menu .container {
     height: 100%;
     display: -webkit-box;
@@ -661,7 +644,7 @@ body {
   }
 }
 
-@media screen and (min-width: 481px) {
+@media screen and (min-width: 480px) {
   .mob-menu {
     display: none;
   }
@@ -671,20 +654,46 @@ body {
   margin-bottom: 306px;
 }
 
+.header__menu-btn,
 .mob-menu__close-btn {
   display: block;
   margin-left: auto;
   padding: 0;
   width: 40px;
   height: 40px;
-  background-color: #fff;
-  border: 0px;
+  background-color: transparent;
+  border: none;
+}
+
+.header__menu-btn {
+  fill: #000000;
+}
+@media screen and (min-width: 768px) {
+  .header__menu-btn {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__menu-btn {
+    display: none;
+  }
+}
+
+.mob-menu__close-btn {
   fill: var(--title-color);
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mob-menu__close-btn:hover, .mob-menu__close-btn:focus {
   fill: #188ce8;
+}
+
+.mob-menu__close-btn.is-open .mob-menu__icon {
+  display: block;
+}
+
+.header__menu-btn.is-open .header__menu-btn {
+  display: none;
 }
 
 .mob-menu__item:not(:last-child) {
@@ -1024,6 +1033,11 @@ body {
   gap: var(--main-gap);
 }
 
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .clients-item {
+    width: calc((100% - 60px) / 3);
+  }
+}
 @media screen and (min-width: 480px) {
   .clients-item {
     width: calc((100% - 30px) / 2);
