--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -10,6 +10,9 @@
   gap: var(--main-gap);
 }
 .clients-item {
+  @media screen and (min-width: 320px) and (max-width: 479px) {
+    width: calc((100% - 60px) / 3);
+  }
   @include mobile {
     width: calc((100% - 30px) / 2);
   }
