--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -5,12 +5,7 @@
   display: flex;
   align-items: center;
 }
-// @include mobile {
-// }
-// @include tablet {
-// }
-// @include desktop {
-// }
+
 .header__logo {
   padding-top: 16px;
   padding-bottom: 16px;
@@ -25,23 +20,7 @@
     margin-right: 93px;
   }
 }
-.header__menu-btn {
-  display: block;
-  margin-left: auto;
-  padding: 0;
-  width: 40px;
-  height: 40px;
-  background-color: #fff;
-  border: 0px;
-  fill: #000000;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  @include tablet {
-    display: none;
-  }
-  @include desktop {
-    display: none;
-  }
-}
+
 .header__list,
 .connection {
   @media screen and (max-width: 767px) {
@@ -108,47 +87,38 @@
   @include tablet {
     margin-left: auto;
   }
-  // gap: 50px;
-}
-.connection__link {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  color: var(--primary-text-color);
-  fill: var(--primary-text-color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-    fill: var(--accent-color);
-  }
-  // @include tablet {}
   @include desktop {
     display: flex;
     align-items: center;
     gap: 10px;
+  }
+}
+.connection__link {
+  @include tablet {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: var(--primary-text-color);
+    fill: var(--primary-text-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+      fill: var(--accent-color);
+    }
+  }
+  @include desktop {
     font-size: 14px;
     line-height: 1.14;
   }
 }
 
-// .connection__link {
-//   color: var(--primary-text-color);
-//   fill: var(--primary-text-color);
-//   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//   &:hover,
-//   &:focus {
-//     color: var(--accent-color);
-//     fill: var(--accent-color);
-//   }
-// }
-
 // Menu
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .mob-menu {
     display: none;
     position: fixed;
@@ -164,7 +134,7 @@
   }
 }
 .mob-menu .container {
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 767px) {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -176,21 +146,34 @@
   }
 }
 .mob-menu {
-  @media screen and (min-width: 481px) {
+  @include mobile {
     display: none;
   }
 }
 .mob-menu__top {
   margin-bottom: 306px;
 }
+.header__menu-btn,
 .mob-menu__close-btn {
   display: block;
   margin-left: auto;
   padding: 0;
   width: 40px;
   height: 40px;
-  background-color: #fff;
-  border: 0px;
+  background-color: transparent;
+  border: none;
+}
+.header__menu-btn {
+  fill: #000000;
+
+  @include tablet {
+    display: none;
+  }
+  @include desktop {
+    display: none;
+  }
+}
+.mob-menu__close-btn {
   fill: var(--title-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -199,6 +182,16 @@
     fill: #188ce8;
   }
 }
+// .mob-menu__close-btn .mob-menu__icon {
+//   display: none;
+// }
+.mob-menu__close-btn.is-open .mob-menu__icon {
+  display: block;
+}
+.header__menu-btn.is-open .header__menu-btn {
+  display: none;
+}
+
 .mob-menu__item:not(:last-child) {
   margin-bottom: 32px;
 }
