--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -5,9 +5,14 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+
+  overflow-y: scroll;
   opacity: 1;
   transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  // @media screen and (max-width: 479px) {
+  //   padding: 93px 15px;
+  // }
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -15,24 +20,28 @@
   pointer-events: none;
 }
 .modal {
-  position: absolute;
-  width: 528px;
-  min-height: 581px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 450px;
+  padding: 40px;
 
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
-  padding: 40px;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 
   .backdrop.is-hidden & {
     transform: translate(-50%, -50%) scale(1.1);
   }
+  @include tablet {
+    position: absolute;
+    width: calc (100% - 318px);
+    min-height: 581px;
+    top: 50%;
+    left: 50%;
+  }
+  // width: 528px;
 }
 .modal-close {
   position: absolute;
