--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -20,7 +20,11 @@
   pointer-events: none;
 }
 .modal {
-  width: 450px;
+  position: absolute;
+  width: 528px;
+  min-height: 581px;
+  top: 50%;
+  left: 50%;
   padding: 40px;
 
   background: #ffffff;
@@ -34,13 +38,13 @@
   .backdrop.is-hidden & {
     transform: translate(-50%, -50%) scale(1.1);
   }
-  @include tablet {
-    position: absolute;
-    width: calc (100% - 318px);
-    min-height: 581px;
-    top: 50%;
-    left: 50%;
-  }
+  // @include tablet {
+  //   position: absolute;
+  //   width: calc (100% - 318px);
+  //   min-height: 581px;
+  //   top: 50%;
+  //   left: 50%;
+  // }
   // width: 528px;
 }
 .modal-close {
