--- a/css/main.css
+++ b/css/main.css
@@ -178,6 +178,11 @@ body {
   -webkit-transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1), visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1), visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (max-width: 479px) {
+  .backdrop {
+    padding: 93px 15px;
+  }
+}
 
 .backdrop.is-hidden {
   opacity: 0;
@@ -187,7 +192,6 @@ body {
 
 .modal {
   position: absolute;
-  width: 528px;
   min-height: 581px;
   top: 50%;
   left: 50%;
@@ -202,6 +206,11 @@ body {
   transition: -webkit-transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 479px) {
+  .modal {
+    max-width: 450px;
+  }
 }
 .backdrop.is-hidden .modal {
   -webkit-transform: translate(-50%, -50%) scale(1.1);
