--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -10,9 +10,10 @@
   opacity: 1;
   transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
-  // @media screen and (max-width: 479px) {
-  //   padding: 93px 15px;
-  // }
+
+  @media screen and (max-width: 479px) {
+    padding: 93px 15px;
+  }
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -21,7 +22,6 @@
 }
 .modal {
   position: absolute;
-  width: 528px;
   min-height: 581px;
   top: 50%;
   left: 50%;
@@ -35,8 +35,10 @@
   transform: translate(-50%, -50%) scale(1);
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  .backdrop.is-hidden & {
-    transform: translate(-50%, -50%) scale(1.1);
+  @media screen and (max-width: 479px) {
+    max-width: 450px;
+    // width: 100%;
+    // margin: 0 15px;
   }
   // @include tablet {
   //   position: absolute;
@@ -46,6 +48,9 @@
   //   left: 50%;
   // }
   // width: 528px;
+  .backdrop.is-hidden & {
+    transform: translate(-50%, -50%) scale(1.1);
+  }
 }
 .modal-close {
   position: absolute;
