--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -10,10 +10,6 @@
   opacity: 1;
   transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  // @media screen and (max-width: 479px) {
-  //   padding: 93px 15px;
-  // }
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -70,6 +66,9 @@
   .modal-close:focus & {
     fill: var(--accent-color);
   }
+}
+.modal-form {
+  position: relative;
 }
 .modal-title {
   margin-bottom: 12px;
@@ -143,8 +142,8 @@
   }
 }
 .field-check {
+  position: relative;
   display: flex;
-  justify-content: center;
   align-items: center;
   margin-bottom: 29px;
 }
@@ -153,7 +152,7 @@
   display: flex;
   align-items: center;
   margin-right: 5px;
-  font-size: 11px;
+  font-size: 12px;
   line-height: 1.17;
   letter-spacing: var(--typical-letter-spacing);
   color: var(--primary-text-color);
@@ -170,6 +169,16 @@
   &:hover,
   &:focus {
     color: #188ce8;
+  }
+  &::after {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    background-color: var(--accent-color);
+    border: none;
   }
 }
 
